--- a/css/styles.css
+++ b/css/styles.css
@@ -50,8 +50,14 @@
     font-size: 100px;
     -webkit-text-stroke: 0.05px rgb(175, 172, 172);
     font-style: italic;
-    font-family: 'amazdoomright'; /
+    font-family: 'amazdoomright';
 }
 
+@media (max-width: 768px) {
+    .coming-italic {
+        font-size: 50px; /* Mai mic pentru ecrane mai mici */
+        -webkit-text-stroke: 0.03px rgb(175, 172, 172);
+    }
+}
 
   
