--- a/css/styles.css
+++ b/css/styles.css
@@ -65,3 +65,39 @@
       font-size: 2rem; 
     }
 }
+
+/*Start of OUR STORY page*/
+
+.flex-column {
+background-color: white;
+
+}
+
+.full-height {
+    min-height: 100vh; 
+    display: flex;
+    flex-wrap: wrap; 
+    align-items: center; 
+    justify-content: center; 
+  }
+  
+  .full-height .col-12 {
+    flex: 0 0 100%;
+    max-width: 100%;
+  }
+  
+  @media (min-width: 992px) { 
+    .full-height .col-lg-6 {
+      flex: 0 0 50%; 
+      max-width: 50%;
+    }
+  }
+  
+
+  .full-height video {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; 
+  }
+  
+  
