--- a/css/styles.css
+++ b/css/styles.css
@@ -68,9 +68,8 @@
 
 /*Start of OUR STORY page*/
 
-
 .full-height {
-    min-height: 100vh; 
+    min-height: 100vh;; 
     display: flex;
     flex-wrap: wrap; 
     align-items: center; 
@@ -89,11 +88,38 @@
     }
   }
   
-
   .full-height video {
+    height: 100vh;
     width: 100%;
-    height: 100%;
     object-fit: cover; 
   }
+
+  .background2 {
+    background-color: #1d1c1c;
+  }
   
+  .our-story-heading-text {
+    color: white;
+  }
   
+  .our-story-body-text {
+    color: white;
+  }
+
+  .bg-custom-purple {
+    background-color: #B18DD4;
+  }
+  .bg-custom-grey {
+    background-color: #1d1c1c;
+  }
+ 
+  .button-color {
+    background-color: yellow !important; 
+    border-color: black;
+  }
+
+  .our-story-heading-text-button {
+    color: black;
+  }
+
+
