--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,11 @@
 
 .navbar {
     background-color: rgb(30, 30, 30) !important; 
+    position: fixed; 
+  top: 0; 
+  left: 0; 
+  width: 100%; 
+  z-index: 1030; 
 }
 
 .navbar-brand, .navbar-nav .nav-link {
@@ -29,16 +34,23 @@
 }
 
 .navbar .dropdown-item {
-    color: white;
+    color: yellow;
 }
-  
 
-.background {
-  background-image: url('../images/background5.jpg');
-  background-size: cover;
-  background-position: center;
-  background-attachment: fixed;
+.video-background {
+  position: fixed; 
+  right: 0;
+  bottom: 0;
+  min-width: 100%; 
+  min-height: 100%;
   width: auto;
+  height: auto;
+  z-index: -100; 
+  background-size: cover;
+}
+.content {
+  position: relative;
+  z-index: 100;
 }
 
 .img-fluid {
@@ -122,4 +134,13 @@
     color: black;
   }
 
+.navbar-light .navbar-nav .nav-link {
+  color: yellow !important;
+}
+
+.video-full-height {
+  width: 100%;
+  height: 100%;
+  object-fit: cover
+}
 
