--- a/css/styles.css
+++ b/css/styles.css
@@ -144,3 +144,20 @@
   object-fit: cover
 }
 
+.container {
+  display: flex;
+  justify-content: space-between;
+}
+
+/*About Us carousel*/
+.carousel-item img {
+  width: 100%;
+  height: auto;
+}
+.carousel-inner {
+  height: 500px; 
+}
+
+.carousel-item {
+  height: 100%;
+}
