--- a/css/styles.css
+++ b/css/styles.css
@@ -86,6 +86,15 @@
     font-family: "New Rocker", system-ui;
 }
 
+.btn-danger {
+  --bs-popover-max-width: 200px;
+  --bs-popover-border-color: var(--bd-violet-bg);
+  --bs-popover-header-bg: var(--bd-violet-bg);
+  --bs-popover-header-color: var(--bs-white);
+  --bs-popover-body-padding-x: 1rem;
+  --bs-popover-body-padding-y: .5rem;
+}
+
 /*Start of OUR STORY page*/
 
 .full-height {
