--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,7 @@
     text-align: center;
     display: block; 
     margin: 0 10px;
-    font-family: Rubik; 
+    font-family: "Rock Salt", cursive;
 }
 .footer-a:hover {
     color: yellow; 
@@ -87,9 +87,9 @@
     color: rgb(30, 30, 30);
     font-weight: bold;
     font-size: 5rem;
-    -webkit-text-stroke: 0.05px rgb(175, 172, 172);
+    -webkit-text-stroke: 0.05px rgb(12, 11, 11);
     font-style: italic;
-    font-family: "New Rocker", system-ui;
+    font-family: "Rock Salt", cursive;
 }
 
 .btn-danger {
@@ -164,10 +164,23 @@
   font-family: "Rubik", sans-serif;
 }
 
-.video-full-height {
-  width: 100%;
-  height: 100%;
-  object-fit: cover
+.vision-title {
+  font-family: "MedievalSharp", cursive;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 60px;
+  position: relative; 
+
+
+}
+.vision-text {
+  font-family: "Rock Salt", cursive;
+  font-weight: 600;
+  font-size:xx-large;
+  font-style: normal;
+  color: #B18DD4;
+  margin-top: 80px;
+  position: relative; 
 }
 
 .our-values-title {
