--- a/css/styles.css
+++ b/css/styles.css
@@ -323,3 +323,32 @@
 .body-text-corporate {
   color: white;
 }
+.body-text-corporate, .table-content a {
+  color: white !important;
+}
+
+.table-content th,
+.table-content td {
+    background-color: #333; 
+    color: white;
+}
+
+.table-content th,
+.table-content td {
+    border: 1px solid #ddd; 
+}
+
+.btn-primary-marketing {
+  background-color: #c84141;
+  border-color: black;
+  color: #1d1c1c;
+  font-family: "Rock Salt", cursive;
+  font-weight: bold;
+  padding: 10px 80px;
+  font-size: medium;
+}
+.btn-primary-marketing:hover {
+  background-color: yellow;
+  border-color: black;
+  color: #1d1c1c;
+}
