--- a/css/styles.css
+++ b/css/styles.css
@@ -41,6 +41,8 @@
   left: 0; 
   width: 100%; 
   z-index: 1030; 
+  display: flex;
+  justify-content: space-between;
 }
 
 .navbar-brand, .navbar-nav .nav-link {
@@ -54,8 +56,15 @@
 .navbar .dropdown-item {
     color: #edf11a;
 }
-
-
+.btn-outline-success {
+  color: #edf11a; 
+  border-color: #c84141; 
+  font-family: "Rock Salt", cursive !important;
+}
+.btn-outline-success:hover {
+  background-color: #B18DD4 !important; 
+  border-color: #B18DD4 !important; 
+}
 
 .video-background {
   position: fixed; 
@@ -320,9 +329,6 @@
   color: white;
 }
 
-.body-text-corporate {
-  color: white;
-}
 .body-text-corporate, .table-content a {
   color: white !important;
 }
