--- a/css/styles.css
+++ b/css/styles.css
@@ -308,6 +308,7 @@
 
 .corporate-heading {
   margin-top: 100px;
+  font-family: "MedievalSharp", cursive;
 }
 
 .text-decoration-none {
@@ -315,22 +316,22 @@
 }
 
 .heading-corporate {
-  color: white;
+  color:#c84141;
+  font-family: "MedievalSharp", cursive;
 }
 
 .heading-corporate-1 {
   color: #B18DD4;
+  font-family: "MedievalSharp", cursive;
 }
 
 .nav-link-corporate {
   color: #edf11a;
 }
-.nav-link-title {
-  color: white;
-}
 
 .body-text-corporate, .table-content a {
   color: white !important;
+  font-family: "Tauri", sans-serif;
 }
 
 .table-content th,
@@ -361,12 +362,15 @@
 
 .medieval-sharp-font {
   font-family: "MedievalSharp", cursive;
+  margin-top: 20px;
 }
 
 .rock-salt-font {
   font-family: "Rock Salt", cursive;
+  margin-top: 20px;
 }
 
 .tauri-font {
   font-family: "Tauri", sans-serif;
+  margin-top: 20px;
 }
