--- a/css/styles.css
+++ b/css/styles.css
@@ -216,8 +216,7 @@
   
   .our-story-heading-text-button{
     background-color: #c84141 !important; 
-    border-color: black;
-    color: black;
+    color: white;
     font-family: "Rock Salt", cursive;
   }
   .our-story-heading-text-button:hover {
